--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #415d8a;
+    background-color: #ad388f;
 }
 
 #links-container {
@@ -26,7 +26,7 @@ a {
     display: block;
     margin-bottom: 10px;
     padding: 10px;
-    background-color: #782a60;
+    background-color: #7bb5d5;
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
@@ -36,7 +36,7 @@ a {
 footer{
     text-align: center;
     font-size: 18px;
-    color: #00000;
+    color: black;
 }
 
 img {
