--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #B33CB24D;
+    background-color: #57BEE7;
 }
 
 #links-container {
